--- a/app/catalog1.html
+++ b/app/catalog1.html
@@ -125,11 +125,13 @@
  <!-- класс category_menu добавляется если мы не на главной странице -->
 
                     <button class="buttonStartMenu" type="button">Каталог товару</button>
+
                     <nav class='left-group-menu'>
                         <ul class="menu_categories">
                             <!-- Класс decor_arrow добавляй только если есть потомки с ul-->
-                            <li class="menu_categories__item decor_arrow"><a class="menu_categories__link"
-                                                                             href="#">Вентилятори та елементи вентиляційних систем</a>
+                            <li class="menu_categories__item"><a class="menu_categories__link"
+                                                                 href="#">Вентилятори та елементи вентиляційних систем</a>
+                                <button class="btn_menu decor_arrow" type="button"></button>
                                 <ul class="subCategory">
                                     <li class="menu_categories__item"><a class="menu_categories__link"
                                                                          href="#">Побутові вентилятори</a></li>
@@ -137,11 +139,13 @@
                                                                          href="#">Промислові вентилятори</a></li>
                                     <li class="menu_categories__item"><a class="menu_categories__link"
                                                                          href="#">Вентиляційні решітки</a></li>
-                                    <li class="menu_categories__item decor_arrow"><a class="menu_categories__link"
-                                                                                     href="#">Повітроводи, розети, муфти</a>
+                                    <li class="menu_categories__item">
+                                        <a class="menu_categories__link" href="#">Повітроводи, розети, муфти</a>
+                                        <button class="btn_menu decor_arrow" type="button"></button>
                                         <ul class="subCategory">
-                                            <li class="menu_categories__item decor_arrow"><a
-                                                    class="menu_categories__link" href="#">Повітроводи</a>
+                                            <li class="menu_categories__item">
+                                                <a class="menu_categories__link" href="#">Повітроводи</a>
+                                                <button class="btn_menu decor_arrow" type="button"></button>
                                                 <ul class="subCategory">
                                                     <li class="menu_categories__item"><a class="menu_categories__link"
                                                                                          href="#">ПРОБА1</a></li>
@@ -150,8 +154,9 @@
                                                 </ul>
 
                                             </li>
-                                            <li class="menu_categories__item decor_arrow"><a
-                                                    class="menu_categories__link" href="#">Муфти</a>
+                                            <li class="menu_categories__item">
+                                                <a class="menu_categories__link" href="#">Муфти</a>
+                                                <button class="btn_menu decor_arrow" type="button"></button>
                                                 <ul class="subCategory">
                                                     <li class="menu_categories__item"><a class="menu_categories__link"
                                                                                          href="#">ПРОБА1</a></li>
@@ -183,19 +188,22 @@
                             </li>
                             <li class="menu_categories__item"><a class="menu_categories__link"
                                                                  href="?k=cable_wire">Кабель, провід, СІП</a></li>
-                            <li class="menu_categories__item decor_arrow"><a class="menu_categories__link"
-                                                                             href="">Низьковольтне обладнання</a>
+                            <li class="menu_categories__item">
+                                <a class="menu_categories__link" href="">Низьковольтне обладнання</a>
+                                <button class="btn_menu decor_arrow" type="button"></button>
                                 <ul class="subCategory">
                                     <li class="menu_categories__item"><a class="menu_categories__link"
                                                                          href="#">Автоматичні вимикачі, ПЗВ, диференційні автомати</a>
                                     </li>
                                     <li class="menu_categories__item"><a class="menu_categories__link"
                                                                          href="#">Пристрої автоматики</a></li>
-                                    <li class="menu_categories__item decor_arrow"><a class="menu_categories__link"
-                                                                                     href="#">Різне силове та щитове обладнання</a>
+                                    <li class="menu_categories__item">
+                                        <a class="menu_categories__link" href="#">Різне силове та щитове обладнання</a>
+                                        <button class="btn_menu decor_arrow" type="button"></button>
                                         <ul class="subCategory">
-                                            <li class="menu_categories__item decor_arrow"><a
-                                                    class="menu_categories__link" href="#">Запобiжники</a>
+                                            <li class="menu_categories__item">
+                                                <a class="menu_categories__link" href="#">Запобiжники</a>
+                                                <button class="btn_menu decor_arrow" type="button"></button>
                                                 <ul class="subCategory">
                                                     <li class="menu_categories__item"><a class="menu_categories__link"
                                                                                          href="#">Good1</a></li>
@@ -534,96 +542,8 @@
 </div>
 
 
-<div class="blackWrapper"></div>
 
-
-<div id='my_popup'></div>
-<div class="dialog_delivery_basketClear" title="Доставка і оплата" style="display:none">
-    Доставка
-    товару по всій території України відбувається за узгодженням сторін будь-яким зручним для Вас
-    перевізником.<br><br>
-    Можливий самовивіз з точки видачі за адресою: у м.Львові вул.Городоцька, 224.<br><br>
-    (після замовлення Вам зателефонує менеджер для підтвердження і узгодження способу оплати та доставки)
-</div>
-
-
-<form id="searchformHide" action="/" method="post" style="display:none">
-    <input name="getSearchHide" type="text" id="searchInputHide" value="" size="30" maxlength="80"/>
-</form>
-
-
-<div id="dialog_truncate" class="dialog_delivery_basketClear" title="Очистка кошика" style="display:none">Ви дійсно
-    бажаєте видалити всі товари з кошику?
-</div>
-
-<script>
-    $("#dialog_truncate").dialog({autoOpen: false});
-    $("#dialog_truncate").dialog({closeText: "закрити"});
-    $("#dialog_truncate").dialog({
-        buttons: [{
-            text: "Так", click: function () {
-                $(this).dialog("close");
-                truncate_basket();
-            }
-        },
-            {
-                text: "Ні", click: function () {
-                $(this).dialog("close");
-            }
-            }]
-    });
-
-</script>
-
-<div tabindex="-1" role="dialog"
-     class="ui-dialog ui-corner-all ui-widget ui-widget-content ui-front ui-draggable ui-resizable"
-     aria-describedby="dialog" aria-labelledby="ui-id-1" style="display: none; position: absolute;">
-    <div class="ui-dialog-titlebar ui-corner-all ui-widget-header ui-helper-clearfix ui-draggable-handle"><span
-            id="ui-id-1" class="ui-dialog-title">&nbsp;</span>
-        <button type="button" class="ui-button ui-corner-all ui-widget ui-button-icon-only ui-dialog-titlebar-close"
-                title="Close"><span class="ui-button-icon ui-icon ui-icon-closethick"></span><span
-                class="ui-button-icon-space"> </span>Close
-        </button>
-    </div>
-    <div id="dialog" class="ui-dialog-content ui-widget-content"></div>
-    <div class="ui-resizable-handle ui-resizable-n" style="z-index: 90;"></div>
-    <div class="ui-resizable-handle ui-resizable-e" style="z-index: 90;"></div>
-    <div class="ui-resizable-handle ui-resizable-s" style="z-index: 90;"></div>
-    <div class="ui-resizable-handle ui-resizable-w" style="z-index: 90;"></div>
-    <div class="ui-resizable-handle ui-resizable-se ui-icon ui-icon-gripsmall-diagonal-se"
-         style="z-index: 90;"></div>
-    <div class="ui-resizable-handle ui-resizable-sw" style="z-index: 90;"></div>
-    <div class="ui-resizable-handle ui-resizable-ne" style="z-index: 90;"></div>
-    <div class="ui-resizable-handle ui-resizable-nw" style="z-index: 90;"></div>
-</div>
-<div tabindex="-1" role="dialog"
-     class="ui-dialog ui-corner-all ui-widget ui-widget-content ui-front ui-draggable ui-resizable"
-     aria-describedby="dialog_delivery" aria-labelledby="ui-id-2" style="display: none; position: absolute;">
-    <div class="ui-dialog-titlebar ui-corner-all ui-widget-header ui-helper-clearfix ui-draggable-handle"><span
-            id="ui-id-2" class="ui-dialog-title">Доставка і оплата</span>
-        <button type="button" class="ui-button ui-corner-all ui-widget ui-button-icon-only ui-dialog-titlebar-close"
-                title="Close"><span class="ui-button-icon ui-icon ui-icon-closethick"></span><span
-                class="ui-button-icon-space"> </span>закрити
-        </button>
-    </div>
-    <div id="dialog_delivery" class="dialog_delivery_basketClear ui-dialog-content ui-widget-content" style="">
-        Доставка товару по всій території України відбувається за узгодженням сторін будь-яким зручним для Вас
-        перевізником.<br><br>
-        Можливий самовивіз з точки видачі за адресою: у м.Львові вул.Городоцька, 224.<br><br>
-        (після замовлення Вам зателефонує менеджер для підтвердження і узгодження способу оплати та доставки)
-    </div>
-    <div class="ui-resizable-handle ui-resizable-n" style="z-index: 90;"></div>
-    <div class="ui-resizable-handle ui-resizable-e" style="z-index: 90;"></div>
-    <div class="ui-resizable-handle ui-resizable-s" style="z-index: 90;"></div>
-    <div class="ui-resizable-handle ui-resizable-w" style="z-index: 90;"></div>
-    <div class="ui-resizable-handle ui-resizable-se ui-icon ui-icon-gripsmall-diagonal-se"
-         style="z-index: 90;"></div>
-    <div class="ui-resizable-handle ui-resizable-sw" style="z-index: 90;"></div>
-    <div class="ui-resizable-handle ui-resizable-ne" style="z-index: 90;"></div>
-    <div class="ui-resizable-handle ui-resizable-nw" style="z-index: 90;"></div>
-</div>
-
-
+<div class="blackWrapper hidden"></div>
 
 <!-- ANCOR -->
 <div id="back-top">
@@ -632,7 +552,38 @@
     </a>
 </div>
 
-<div id="dialog_pic_full" class="dialog_pic_full" title="Фото"></div>
+<!-- POPUP BIFORE ADD TO SHOPBAG-->
+
+<div class="TEST_BUTTON"></div>  <!--  уберешь эту кнопку и повесешь собитие на то что тебе надо-->
+
+<div class="popup_likeShopbag hidden">
+    <div class="wrapperBlock">
+        <button class="popup_likeShopbag__close">
+            <i class="fa fa-times decor_icon__close" aria-hidden="true"></i>
+        </button>
+        <p class="popup_likeShopbag__text_main">Подтверждение</p>
+
+        <!-- Возможно этот кусок надо будет дублировать если добавляеться ещё один товар в корзину-->
+        <div class="popup_likeShopbag__product">
+            <img class="shoppingBasket_product__image" src="image/Products/zefir/z1.jpg" alt="">
+            <p class="shoppingBasket_product__name">Электро-сеть ываыв ыв аываы аыв аываываыва ываываыва ываываываываываываыва</p>
+        </div>
+        <!---->
+
+        <p class="popup_likeShopbag__text_main">добавлен в корзину</p>
+
+        <div class="popup_likeShopbag__buttons">
+            <button class="button_buyProduct popup_likeShopbag__continueBuying" type="button" title="continue buying">
+                <span class="popup_likeShopbag__text">Продолжить покупки</span>
+            </button>
+            <div class="button_buyProduct popup_likeShopbag__goToShopbag" title="go to shopbag">
+                <a href="#" class="popup_likeShopbag__text">Оформление заказа</a>
+            </div>
+        </div>
+
+    </div>
+</div>
+<!-- -->
 
 
 
