--- a/app/product.html
+++ b/app/product.html
@@ -129,8 +129,9 @@
                     <nav class='left-group-menu'>
                         <ul class="menu_categories">
                             <!-- Класс decor_arrow добавляй только если есть потомки с ul-->
-                            <li class="menu_categories__item decor_arrow"><a class="menu_categories__link"
-                                                                             href="#">Вентилятори та елементи вентиляційних систем</a>
+                            <li class="menu_categories__item"><a class="menu_categories__link"
+                                                                 href="#">Вентилятори та елементи вентиляційних систем</a>
+                                <button class="btn_menu decor_arrow" type="button"></button>
                                 <ul class="subCategory">
                                     <li class="menu_categories__item"><a class="menu_categories__link"
                                                                          href="#">Побутові вентилятори</a></li>
@@ -138,11 +139,13 @@
                                                                          href="#">Промислові вентилятори</a></li>
                                     <li class="menu_categories__item"><a class="menu_categories__link"
                                                                          href="#">Вентиляційні решітки</a></li>
-                                    <li class="menu_categories__item decor_arrow"><a class="menu_categories__link"
-                                                                                     href="#">Повітроводи, розети, муфти</a>
+                                    <li class="menu_categories__item">
+                                        <a class="menu_categories__link" href="#">Повітроводи, розети, муфти</a>
+                                        <button class="btn_menu decor_arrow" type="button"></button>
                                         <ul class="subCategory">
-                                            <li class="menu_categories__item decor_arrow"><a
-                                                    class="menu_categories__link" href="#">Повітроводи</a>
+                                            <li class="menu_categories__item">
+                                                <a class="menu_categories__link" href="#">Повітроводи</a>
+                                                <button class="btn_menu decor_arrow" type="button"></button>
                                                 <ul class="subCategory">
                                                     <li class="menu_categories__item"><a class="menu_categories__link"
                                                                                          href="#">ПРОБА1</a></li>
@@ -151,8 +154,9 @@
                                                 </ul>
 
                                             </li>
-                                            <li class="menu_categories__item decor_arrow"><a
-                                                    class="menu_categories__link" href="#">Муфти</a>
+                                            <li class="menu_categories__item">
+                                                <a class="menu_categories__link" href="#">Муфти</a>
+                                                <button class="btn_menu decor_arrow" type="button"></button>
                                                 <ul class="subCategory">
                                                     <li class="menu_categories__item"><a class="menu_categories__link"
                                                                                          href="#">ПРОБА1</a></li>
@@ -184,19 +188,22 @@
                             </li>
                             <li class="menu_categories__item"><a class="menu_categories__link"
                                                                  href="?k=cable_wire">Кабель, провід, СІП</a></li>
-                            <li class="menu_categories__item decor_arrow"><a class="menu_categories__link"
-                                                                             href="">Низьковольтне обладнання</a>
+                            <li class="menu_categories__item">
+                                <a class="menu_categories__link" href="">Низьковольтне обладнання</a>
+                                <button class="btn_menu decor_arrow" type="button"></button>
                                 <ul class="subCategory">
                                     <li class="menu_categories__item"><a class="menu_categories__link"
                                                                          href="#">Автоматичні вимикачі, ПЗВ, диференційні автомати</a>
                                     </li>
                                     <li class="menu_categories__item"><a class="menu_categories__link"
                                                                          href="#">Пристрої автоматики</a></li>
-                                    <li class="menu_categories__item decor_arrow"><a class="menu_categories__link"
-                                                                                     href="#">Різне силове та щитове обладнання</a>
+                                    <li class="menu_categories__item">
+                                        <a class="menu_categories__link" href="#">Різне силове та щитове обладнання</a>
+                                        <button class="btn_menu decor_arrow" type="button"></button>
                                         <ul class="subCategory">
-                                            <li class="menu_categories__item decor_arrow"><a
-                                                    class="menu_categories__link" href="#">Запобiжники</a>
+                                            <li class="menu_categories__item">
+                                                <a class="menu_categories__link" href="#">Запобiжники</a>
+                                                <button class="btn_menu decor_arrow" type="button"></button>
                                                 <ul class="subCategory">
                                                     <li class="menu_categories__item"><a class="menu_categories__link"
                                                                                          href="#">Good1</a></li>
@@ -779,12 +786,48 @@
 </div>
 
 
-<p id="back-top" style="display:none">
-    <a href="#top"><span></span></a>
-</p>
+<div class="blackWrapper hidden"></div>
 
+<!-- ANCOR -->
+<div id="back-top">
+    <a href="#top">
+        <span></span>
+    </a>
+</div>
 
-<div id="dialog_pic_full" class="dialog_pic_full" title="Фото"></div>
+<!-- POPUP BIFORE ADD TO SHOPBAG-->
+
+<div class="TEST_BUTTON"></div>  <!--  уберешь эту кнопку и повесешь собитие на то что тебе надо-->
+
+<div class="popup_likeShopbag hidden">
+    <div class="wrapperBlock">
+        <button class="popup_likeShopbag__close">
+            <i class="fa fa-times decor_icon__close" aria-hidden="true"></i>
+        </button>
+        <p class="popup_likeShopbag__text_main">Подтверждение</p>
+
+        <!-- Возможно этот кусок надо будет дублировать если добавляеться ещё один товар в корзину-->
+        <div class="popup_likeShopbag__product">
+            <img class="shoppingBasket_product__image" src="image/Products/zefir/z1.jpg" alt="">
+            <p class="shoppingBasket_product__name">Электро-сеть ываыв ыв аываы аыв аываываыва ываываыва ываываываываываываыва</p>
+        </div>
+        <!---->
+
+        <p class="popup_likeShopbag__text_main">добавлен в корзину</p>
+
+        <div class="popup_likeShopbag__buttons">
+            <button class="button_buyProduct popup_likeShopbag__continueBuying" type="button" title="continue buying">
+                <span class="popup_likeShopbag__text">Продолжить покупки</span>
+            </button>
+            <div class="button_buyProduct popup_likeShopbag__goToShopbag" title="go to shopbag">
+                <a href="#" class="popup_likeShopbag__text">Оформление заказа</a>
+            </div>
+        </div>
+
+    </div>
+</div>
+<!-- -->
+
 
 
 <script type="text/javascript" src="libs/jquery.min.js"></script>
