fixed little bug

--- a/app/catalog2.html
+++ b/app/catalog2.html
@@ -580,7 +580,7 @@
                                 <div class="price-item-wrap1">
                                     <div class="price-item-box">
 
-                                        <a href="" class="price-item-pic-wrap">
+                                        <a href="product.html" class="price-item-pic-wrap">
                                             <img src="./photo/preview/ventilators/1.jpg"
                                                  alt="Вентилятор PLAY Classic 125 S (стандарт) білий Dospel (Доспел)">
 
@@ -652,7 +652,7 @@
                                 <div class="price-item-wrap1">
                                     <div class="price-item-box">
 
-                                        <a href="" class="price-item-pic-wrap">
+                                        <a href="product.html" class="price-item-pic-wrap">
                                             <img src="./photo/preview/ventilators/1.jpg"
                                                  alt="Вентилятор PLAY Classic 125 S (стандарт) білий Dospel (Доспел)">
 
