--- a/app/index.html
+++ b/app/index.html
@@ -276,7 +276,7 @@
                                         <img src="./photo/group/gl3188.jpg" alt="">
                                     </div>
 
-                                    <a class="about_item_box" href="?k=ventilators">
+                                    <a class="about_item_box" href="catalog1.html">
                                         <p class="about_item_text_hlim">Вентилятори та елементи вентиляційних систем</p>
                                         <img class="about_item_im" src="./photo/group/vent-collage.jpg"
                                              alt="Вентилятори та елементи вентиляційних систем">
