--- a/app/catalog2.html
+++ b/app/catalog2.html
@@ -581,7 +581,7 @@
                                     <div class="price-item-box">
 
                                         <a href="product.html" class="price-item-pic-wrap">
-                                            <img src="./photo/preview/ventilators/1.jpg"
+                                            <img src="photo/preview/ventilators/1.jpg"
                                                  alt="Вентилятор PLAY Classic 125 S (стандарт) білий Dospel (Доспел)">
 
                                             <!--Сюда всталяются изображения 180х180рх-->
@@ -653,7 +653,7 @@
                                     <div class="price-item-box">
 
                                         <a href="product.html" class="price-item-pic-wrap">
-                                            <img src="./photo/preview/ventilators/1.jpg"
+                                            <img src="photo/preview/ventilators/1.jpg"
                                                  alt="Вентилятор PLAY Classic 125 S (стандарт) білий Dospel (Доспел)">
 
                                             <!--Сюда всталяются изображения 180х180рх-->
