--- a/app/delivery.html
+++ b/app/delivery.html
@@ -317,14 +317,14 @@
             </div>
         </div>
     </div>
-
+    <!---------------------------------------- FOOTER --------------------------------------------------------->
     <footer class="footer">
         <div class="container">
             <div class="col-md-4 footer_part3">
                 <div class="bt_div">
-                    <p class="bt_text"><b>Режим роботи Call center</b> (при замовленні по телефону):
-                        <b>Пн-Пт: 9:00-18:00
-                            Cб: 10:00-15:00</b>
+                    <p class="bt_text"><b>Режим роботи Call center</b> (при замовленні по телефону):<br>
+                        <b>Пн-Пт: 9:00-18:00<br>
+                            Cб: 10:00-15:00</b><br>
                         При замовленні по телефону прохання вказувати код товару.</p>
 
                     <div class="cell-group_m1">
@@ -370,13 +370,10 @@
 
             <div class="col-md-4 footer_part2">
                 <div class="bt_div">
-                    <span class="bt_text">Приєднуйтесь до Інтернет-магазину 16А  в соціальних
+                    <span class="bt_text">Приєднуйтесь до Інтернет-магазину 16А<br> в соціальних
                     мережах:</span>
-                    <a href="https://www.facebook.com/16a.com.ua/" target="_blank"><img src="../image/facebook.png"
-                                                                                        alt="facebook"></a>
-                    <a href="https://plus.google.com/109777980768435551079" target="_blank"><img
-                            src="../image/google.png"
-                            alt="google+"></a>
+                    <a href="https://www.facebook.com/16a.com.ua/" target="_blank"><img src="../image/facebook.png" alt="facebook"></a>
+                    <a href="https://plus.google.com/109777980768435551079" target="_blank"><img src="../image/google.png" alt="google+"></a>
                 </div>
             </div>
 
@@ -387,7 +384,6 @@
         </div>
     </footer>
 </div>
-
 
 
 <div class="blackWrapper hidden"></div>
@@ -434,15 +430,7 @@
 
 
 
-
-
-
 <script type="text/javascript" src="libs/jquery.min.js"></script>
-
-<!--<script type="text/javascript" src="js/menu-vertical-root-func.js"></script>-->
-<!--<script type="text/javascript" src="js/menu-vertical-root.js"></script>-->
-<!--<script type="text/javascript" src="gal4js/modernizr.custom.17475.js"></script>-->
-
 
 <!-- build:js js/libs.min.js -->
 
@@ -455,6 +443,30 @@
 <script src="js/common.js"></script>
 <!-- endbuild -->
 
+
+
+
+
+
+
+
+<script>
+    (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function () {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
+    ga('create', 'UA-38360333-2', 'auto');
+    ga('send', 'pageview');
+
+</script>
 
 <!-- BEGIN JIVOSITE CODE {literal} -->
 <script type='text/javascript'>
@@ -486,4 +498,5 @@
 
 
 </body>
+
 </html>
