--- a/app/catalog1.html
+++ b/app/catalog1.html
@@ -67,6 +67,26 @@
                                 <p><span class="top-phone_bold">(063)</span> <span>247-70-70,</span></p>
                                 <p><span class="top-phone_bold">(032)</span> <span>247-70-70</span></p>
                             </div>
+                            <form class="bl_language" method="post" enctype="multipart/form-data" id="form_language" action="http://16a.loc/index.php?route=common/language/language">
+                                <span class="bl_language__active">ru</span>
+                                <ul class="bl_language__variables hidden">
+                                    <li class="bl_language__variables_item language-select"><span onclick="changeLang($(this));" name="ru-ru"> ru</span></li>
+                                    <li class="bl_language__variables_item language-select"><span onclick="changeLang($(this));" name="uk-ua"> uk</span></li>
+                                </ul>
+                                <input id="lang_val_to_form" type="hidden" name="code" value="">
+                                <input type="hidden" name="redirect" value="">
+                                <script type="text/javascript">
+                                    function changeLang(element){
+                                        $('#lang_val_to_form').val(element.attr('name'));
+                                        $('#form_language').submit();
+                                    }
+                                    function chowElem(element){
+                                        element.siblings('ul').toggleClass('hidden');
+                                    }
+                                </script>
+                            </form>
+
+
                         </div>
                     </div>
                 </div>
@@ -480,29 +500,28 @@
                         При замовленні по телефону прохання вказувати код товару.</p>
 
                     <div class="cell-group_m1">
-                        <div class="cell-logo"><img src="../image/ks_m1.png"></div>
-                        <div class="cell-logo-t1">(067) 340-81-46</div>
+                        <span class="icon-tel icon-tel__kievstar"></span>
+                        <span class="text_phone">(067) 340-81-46</span>
                     </div>
 
                     <div class="cell-group_m1">
-                        <div class="cell-logo"><img src="../image/vf_m1.png"></div>
-                        <div class="cell-logo-t1">(050) 421-70-70</div>
+                        <span class="icon-tel icon-tel__vodafon"></span>
+                        <span class="text_phone">(050) 421-70-70</span>
                     </div>
 
                     <div class="cell-group_m1">
-                        <div class="cell-logo"><img src="../image/lf_m1.png"></div>
-                        <div class="cell-logo-t1">(063) 247-70-70</div>
+                        <span class="icon-tel icon-tel__life"></span>
+                        <span class="text_phone">(063) 247-70-70</span>
                     </div>
 
 
                     <div class="cell-group_m1">
-                        <div class="cell-logo"><img src="../image/lviv_m1.png"></div>
-                        <div class="cell-logo-t1">(032) 247-70-70</div>
+                        <span class="icon-tel icon-tel__lviv"></span>
+                        <span class="text_phone">(032) 247-70-70</span>
                     </div>
 
                     <div class="cell-group_m1">
-                        <div class="cell-logo"></div>
-                        <div class="cell-logo-t1">(050) 421-70-70 (Viber)</div>
+                        <span class="text_phone">(050) 421-70-70 (Viber)</span>
                     </div>
 
 
